[package]
name = "huffman-compress"
version = "0.6.1" # remember to update html_root_url and changelog
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
license = "MIT OR Apache-2.0"
keywords = ["huffman", "compression", "decompression"]
readme = "README.md"
repository = "https://github.com/niklasf/rust-huffman-compress"
categories = ["compression", "encoding", "algorithms"]
description = "Huffman compression given a probability distribution over arbitrary symbols"
edition = "2021"

[[bench]]
name = "benches"
harness = false

[dependencies]
bit-vec = "0.8"
num-traits = "0.2"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
quickcheck = "1"

[badges]
travis-ci = { repository = "niklasf/rust-huffman-compress", branch = "master" }
